# DNN-FLASH

./: .gitignore  CMakeLists.txt  Makefile  README.md  pyproject.toml
benchmarks/: bench_attention.cpp  bench_qk_postops.cpp
benchmarks/results/stage-1-postops/: cpp-qk-postops.csv  cpp-qk-postops.json  onednn-postops-capability.json
benchmarks/tensorflow/: bench_flashone_tf_e2e.py
cmake/: FindLocalDnnl.cmake
cpp/: CMakeLists.txt
cpp/src/: smoke.cpp
docs/: custom-op-data-path-audit-2026-06-26.md  design-self-review-2026-06-27.md  design.md  development-log.md  perf-baseline-2026-06-26.md  project-plan.md  requirements.md  system-design.md
docs/api/: attention-engine.md  python-tf-api.md  runtime-planner.md  score-mod-lowering.md  tensorflow-custom-op.md
docs/archive/audits/: custom-op-data-path-audit-2026-06-26.md
docs/archive/environments/: local-env-2026-06-25.md
docs/archive/historical/: design.md  perf-baseline-2026-06-26.md
docs/backend/: local-env-2026-06-25.md  onednn-brgemm-notes.md  onednn-postops-capability-2026-06-27.md
docs/design/: block-mask-planner.md  development-flow.md  project-plan.md  stage-1-interface-contract.md  stage-1-postops-validation-plan.md  system-design-freeze-checklist.md  system-design.md  xla-custom-call.md
docs/design/adr/: 0001-standalone-core-first.md
docs/modules/: README.md  block-mask-planner.md  development-flow.md  onednn-integration.md  tensorflow-custom-op.md  verification-benchmark.md  xla-custom-call.md
docs/reports/: design-self-review-2026-06-27.md  stage-1-gate-closure-2026-06-28.md  stage-1-postops-validation-report.md
include/flashone/: attention.hpp  attention_workspace.hpp  backend.hpp  batched_attention.hpp  onednn_brgemm_tile_kernel.hpp  onednn_tile_kernel.hpp  runtime_plan.hpp  score_mod_plan.hpp  tile_kernel.hpp
include/onednn_flash/: attention.hpp  attention_workspace.hpp  backend.hpp  batched_attention.hpp  onednn_brgemm_tile_kernel.hpp  onednn_tile_kernel.hpp  runtime_plan.hpp  score_mod_plan.hpp  tile_kernel.hpp
python/flashone/: __init__.py  reference.py
python/flashone_tf/: __init__.py  ops.py
python/onednn_flash/: __init__.py  reference.py
python/onednn_flash_tf/: __init__.py  ops.py
scripts/: bootstrap.sh
src/flashone/: attention.cpp  attention_workspace.cpp  backend.cpp  batched_attention.cpp  onednn_brgemm_tile_kernel.cpp  onednn_tile_kernel.cpp  qk_score_tile.cpp  qk_score_tile_internal.hpp  runtime_plan.cpp  score_mod_plan.cpp  tile_kernel.cpp
src/onednn_flash/: attention.cpp  attention_workspace.cpp  backend.cpp  batched_attention.cpp  onednn_brgemm_tile_kernel.cpp  onednn_tile_kernel.cpp  qk_score_tile.cpp  qk_score_tile_internal.hpp  runtime_plan.cpp  score_mod_plan.cpp  tile_kernel.cpp
src/paper_prototype/: __init__.py  main.py
tensorflow_ops/: flashone_attention_op.cc  onednn_flash_attention_op.cc
tests/: test_smoke.py
tests/cpp/: test_attention.cpp  test_backend.cpp  test_dnnl_smoke.cpp  test_onednn_postops_capability.cpp  test_q_tile_attention.cpp  test_qk_pv_tile_attention.cpp  test_qk_score_tile.cpp  test_runtime_plan.cpp  test_stage1_minimal.cpp  test_stage1_simple.cpp  test_tile_kernel.cpp  test_workspace_attention.cpp
tests/python/: test_reference.py  test_score_mods.py
tests/tensorflow/: test_flashone_tf_e2e.py  test_flashone_tf_op.py
