[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "flashone"
version = "0.1.0"
description = "CPU FlexAttention prototype based on Flash-style tiling and oneDNN-oriented design"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.5",
]

[tool.setuptools.packages.find]
where = ["python"]

[tool.pytest.ini_options]
testpaths = ["tests/python"]
pythonpath = ["python"]

[tool.ruff]
line-length = 100
src = ["python", "tests/python"]
